--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,11 @@ body {
   padding: 0 15px;
   margin: 0 auto;
   
+  @media (min-width: $tablet-width) {
+    padding: 0 29px;
+    width: 710px;
+  }
+  
 
 }
 
@@ -41,6 +46,11 @@ body {
   font-size: 12px;
   line-height: normal;
   text-decoration: none;
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    padding: 18px 35px 17px;
+  }
 }
 
 .section-title {
@@ -54,17 +64,30 @@ body {
 }
 
 .header {
+  position: relative;
   text-align: center;
   padding: 27px 0 256px;
   background-color: $black;
+
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    padding: 28px 0 32px;
+  }
+
+
 }
 
 .logo {
-  display: inline-block;
+  display: block;
 }
 
 .header__logo {
   margin: 0 0 57px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 94px;
+  }
 }
 
 .header__city {
@@ -73,14 +96,25 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #A07B50;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    margin-bottom: 18px;
+  }
 }
 
 .main-title {
-  margin: 0 0 30px;
+  margin: 0 0 25px;
 
   font-family: "Yeseva One", "Georgia", serif;
   font-size: 36px;
   line-height: normal;
+
+
+  @media (min-width: $tablet-width) {
+    font-size: 52px;
+    margin-bottom: 22px;
+  }
 }
 
 .header__description {
@@ -89,10 +123,19 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: #A07B50;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 57px;
+  }
 }
 
 .header__button-more {
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    margin-bottom: 57px;
+  }
 }
 
 .header__cat-photo {
@@ -100,4 +143,26 @@ body {
 
   position: absolute;
   right: 0;
+
+  @media (min-width: $tablet-width) {
+    top: 62px;
+  }
+
+
+}
+
+.social-list {
+  display: none;
+
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.social-list__item {
+  margin-right: 11px;
 }
