Сверстал десктопную версию блока особенностей породы

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -417,6 +417,11 @@ body {
     max-width: 450px;
     margin: 0 auto 51px;
   }
+
+  @media (min-width: $tablet-width) {
+    max-width: 735px;
+    margin: 0 auto 34px;
+  }
 }
 
 .breed-features__wrapper {
@@ -456,6 +461,11 @@ body {
     margin-top: 5px;
 
     line-height: inherit;
+    
+    @media (min-width: $desktop-width) {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -506,6 +516,55 @@ body {
       }
     }
   }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    line-height: 1.5;
+
+    &:nth-child(1) {
+      max-width: 290px;
+      left: 45px;
+      top: 172px;
+      flex-direction: row-reverse;
+      text-align: right;
+
+      &:before {
+        margin: 0 0 0 23px;
+      }
+    }
+
+    &:nth-child(2) {
+      max-width: 195px;
+      right: 94px;
+      top: 283px;
+
+      &:before {
+        margin: 0 20px 0 0;
+      }
+    }
+
+    &:nth-child(3) {
+      max-width: 175px;
+      right: 150px;
+      bottom: 125px;
+
+      &:before {
+        margin: 0 18px 0 0;
+      }
+    }
+
+    &:nth-child(4) {
+      max-width: 230px;
+      left: 75px;
+      bottom: 176px;
+      flex-direction: row-reverse;
+      text-align: right;
+
+      &:before {
+        margin: 0 0 0 17px;
+      }
+    }
+  }
 }
 
 .breed-features__list {
@@ -515,5 +574,9 @@ body {
     top: 0;
     left: 0;
     right: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 700px;
   }
 }
