--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -796,29 +796,85 @@ body {
   padding: 60px 0;
   text-align: center;
   background-color: $black;
+
+  @media (min-width: $tablet-width) {
+    padding: 85px 0 215px;
+  }
 }
 
 .team__title {
   margin: 0 0 30px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .team__description {
   margin: 0 0 100px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 510px;
+    margin: 0 auto 45px;
+  }
 }
 
 .employee-comment {
   margin: 0;
   background-color: $lightBlack;
   padding: 2px 11px 16px;
+  position: relative;
+
+  @media (min-width: $tablet-width) {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 70px 95px 75px 106px;
+    box-sizing: border-box;
+    text-align: left;
+
+    br {
+      content: ' ';
+    }
+
+    br::after {
+      content: ' ';
+    }
+
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: -23px;
+      left: -25px;
+
+      width: 109%;
+      height: 113%;
+      border: 1px solid rgba(160, 123, 80, 0.43);
+      box-sizing: border-box;
+    }
+  }
+}
+
+
+.employee-slider {
+  position: relative;
+  width: 174px;
+
+  @media (min-width: $tablet-width) {
+    width: 290px;
+  }
 }
 
 .employee-comment__slider {
   margin: -66px auto 25px;
-}
 
-.employee-slider {
-  position: relative;
-  max-width: 174px;
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    position: absolute;
+    right: -8px;
+    bottom: -119px;
+  }
 }
 
 .employee-slider__img {
@@ -836,9 +892,15 @@ body {
   &--left {
     @extend .pets-slider__button--left
   }
+
+  @media (min-width: $tablet-width) {
+    top: auto;
+    bottom: 0;
+  }
 }
 
 .employee-comment__author {
+  display: inline-block;
   margin: 0 0 10px;
 
   font-weight: 500;
@@ -846,6 +908,10 @@ body {
   line-height: normal;
   color: $lightBrown;
   font-style: normal;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+  }
 }
 
 .employee-comment__position {
@@ -853,12 +919,43 @@ body {
 
   font-weight: normal;
   color: $lightBrown;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+  }
 }
 
 .employee-comment__text {
   margin: 0 0 25px;
+  opacity: 0.72;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+  }
 }
 
 .employee-comment__social-list {
   justify-content: center;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    justify-content: flex-start;
+
+    .social-list__item {
+      &--fb svg {
+        width: 8px;
+        height: auto;
+      }
+
+      &--tw svg {
+        width: 20px;
+        height: auto;
+      }
+
+      &--vk svg {
+        width: 21px;
+        height: auto;
+      }
+    }
+  }
 }
