--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,7 @@ body {
   width: 290px;
   padding: 0 15px;
   margin: 0 auto;
+  position: relative;
   
   @media (min-width: $tablet-width) {
     padding: 0 29px;
@@ -208,6 +209,7 @@ body {
 
   @media (min-width: $desktop-width) {
     flex-direction: column;
+    align-items: center;
     position: absolute;
     left: -15px;
 
@@ -230,7 +232,6 @@ body {
   margin-right: 11px;
 
   @media (min-width: $desktop-width) {
-    margin-right: 0;
     margin-bottom: 15px;
   }
 }
@@ -800,6 +801,10 @@ body {
   @media (min-width: $tablet-width) {
     padding: 85px 0 215px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 85px 0 95px;
+  }
 }
 
 .team__title {
@@ -853,6 +858,10 @@ body {
       box-sizing: border-box;
     }
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 112px 0 auto;
+  }
 }
 
 
@@ -862,6 +871,11 @@ body {
 
   @media (min-width: $tablet-width) {
     width: 290px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    height: 356px;
   }
 }
 
@@ -875,6 +889,11 @@ body {
     right: -8px;
     bottom: -119px;
   }
+
+  @media (min-width: $desktop-width) {
+    top: -23px;
+    left: -460px;
+  }
 }
 
 .employee-slider__img {
@@ -886,16 +905,32 @@ body {
   @extend .pets-slider__button;
 
   &--right {
-    @extend .pets-slider__button--right
+    @extend .pets-slider__button--right;
+
+    @media (min-width: $desktop-width) {
+      right: -573px;
+      transform: translateY(-50%);
+    }
   }
 
   &--left {
-    @extend .pets-slider__button--left
+    @extend .pets-slider__button--left;
+
+    @media (min-width: $desktop-width) {
+      left: -73px;
+      transform: translateY(-50%) rotate(180deg);
+    }
   }
 
   @media (min-width: $tablet-width) {
     top: auto;
     bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: block;
+    top: 50%;
+    bottom: initial;
   }
 }
 
