--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1153,3 +1153,93 @@ body {
     font-size: 16px;
   }
 }
+
+.reviews {
+  padding: 0 0 60px;
+}
+
+.reviews__title {
+  margin: 0 0 143px;
+}
+
+.reviews-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.review {
+  position: relative;
+  padding: 118px 31px 40px;
+  margin: 0;
+  background-color: $black;
+
+  text-align: center;
+}
+
+.review-slider {
+  position: absolute;
+  top: -83px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 100%;
+}
+
+.review-slider__button {
+  @extend .pets-slider__button;
+
+  &--right {
+    @extend .pets-slider__button--right;
+  }
+
+  &--left {
+    @extend .pets-slider__button--left;
+  }
+}
+
+.review__author {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: normal;
+
+  display: inline-block;
+  margin: 0 0 20px;
+}
+
+.review__text {
+  margin: 0 0 20px;
+}
+
+.meta-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social-list--bordered .social-list__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 28px;
+  height: 28px;
+  margin-right: 15px;
+  border: 1px solid rgba(160, 123, 80, 0.27);
+  box-sizing: border-box;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.review__meta-row {
+  max-width: 178px;
+  margin: 0 auto;
+}
+
+.meta-row time {
+  font-size: 12px;
+  color: $lightBrown;
+}
