--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1160,10 +1160,18 @@ body {
   @media (min-width: $tablet-width) {
     padding-bottom: 87px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 112px;
+  }
 }
 
 .reviews__title {
   margin: 0 0 143px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 58px;
+  }
 }
 
 .reviews-list {
@@ -1184,6 +1192,14 @@ body {
     max-width: 578px;
     margin: 0 auto;
     padding-top: 148px;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 640px;
+    margin: 0 55px 0 auto;
+    padding: 109px 87px 100px 145px;
+    text-align: left;
   }
 }
 
@@ -1197,6 +1213,15 @@ body {
 
   @media (min-width: $tablet-width) {
     top: -95px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: inline-block;
+    width: auto;
+
+    top: 46px;
+    left: -381px;
+    transform: none;
   }
 }
 
@@ -1236,6 +1261,10 @@ body {
       transform: none;
     }
   }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .review__author {
@@ -1259,6 +1288,8 @@ body {
     max-width: 407px;
     margin: 0 auto 35px;
   }
+
+
 }
 
 .meta-row {
@@ -1267,7 +1298,7 @@ body {
   justify-content: space-between;
 }
 
-.social-list--bordered .social-list__item {
+.social-list--review .social-list__item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1275,6 +1306,7 @@ body {
   width: 28px;
   height: 28px;
   margin-right: 15px;
+  margin-bottom: 0;
   border: 1px solid rgba(160, 123, 80, 0.27);
   box-sizing: border-box;
 
@@ -1286,6 +1318,10 @@ body {
 .review__meta-row {
   max-width: 178px;
   margin: 0 auto;
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+  }
 }
 
 .meta-row time {
