Адаптировал подвал под планшетные устройства

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1334,12 +1334,31 @@ body {
   padding: 40px 0;
   background-color: #151313;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 35px 0 45px;
+  }
+}
+
+.footer__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    max-width: 669px;
+    margin: 0 auto;
+  }
 }
 
 .footer__address {
   margin: 0 0 10px;
   font-weight: normal;
   color: #D6CCC2;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__phone {
@@ -1347,6 +1366,10 @@ body {
   margin: 0 0 20px;
   font-weight: normal;
   color: #FDF2E6;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__social-list {
@@ -1354,8 +1377,19 @@ body {
   align-items: center;
   margin-right: -20px;
   margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    order: -1;
+    margin-bottom: 0;
+  }
 }
 
 .footer__social-list .social-list__item {
   margin-right: 20px;
+}
+
+.footer__logo {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
