--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -231,7 +231,9 @@ body {
 
 .social-list__item {
   margin-right: 11px;
+}
 
+.header__social-list .social-list__item {
   @media (min-width: $desktop-width) {
     margin-bottom: 15px;
   }
@@ -1349,6 +1351,10 @@ body {
     max-width: 669px;
     margin: 0 auto;
   }
+
+  @media (min-width: $desktop-width) {
+    min-width: 848px;
+  }
 }
 
 .footer__address {
@@ -1366,6 +1372,7 @@ body {
   margin: 0 0 20px;
   font-weight: normal;
   color: #FDF2E6;
+  text-decoration: none;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
@@ -1386,10 +1393,19 @@ body {
 
 .footer__social-list .social-list__item {
   margin-right: 20px;
+
+  @media (min-width: $desktop-width) {
+    margin-right: 10px;
+  }
 }
 
 .footer__logo {
   @media (min-width: $tablet-width) {
     display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: block;
+    order: -2;
   }
 }
