--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+  min-width: 290px;
   padding: 0 15px;
   margin: 0 auto;
   position: relative;
@@ -61,12 +62,12 @@ body {
 
   font-family: "Yeseva One", "Georgia", serif;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 2em;
   line-height: normal;
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    font-size: 36px;
+    font-size: 2.25em;
   }
 }
 
@@ -249,9 +250,11 @@ body {
 
 .pets {
   padding: 60px 0;
+  font-size: 0.875rem;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    font-size: 1rem;
     padding: 100px 0 91px;
   }
 
@@ -291,13 +294,13 @@ body {
 .pets-list__item {
   margin-right: 45px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 0.875em;
   line-height: normal;
   opacity: 0.2;
   cursor: pointer;
 
   @media (min-width: $tablet-width) {
-    font-size: 18px;
+    font-size: 1.125em;
   }
 
   &:hover {
@@ -337,6 +340,7 @@ body {
     position: relative;
     z-index: 3;
     display: inline-block;
+    font-size: 0.875rem;
     text-align: left;
 
     margin-right: 34px;
@@ -357,14 +361,26 @@ body {
       position: static;
       transform: none;
     }
+
   }
 
   &--left {
-    left: 36px;
+    left: 5.07%;
   }
 
   &--right {
-    right: 67px;
+    right: 9.43%;
+  }
+
+  &--active {
+    width: 85.71%;
+    max-width: 290px;
+    display: inline-block;
+
+    & img {
+      display: block;
+      width: 100%;
+    }
   }
 }
 
@@ -416,9 +432,11 @@ body {
 
 .breed-features {
   padding: 0 0 60px;
+  font-size: 0.875rem;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    font-size: 1rem;
     padding: 0 0 73px;
   }
 }
@@ -447,6 +465,16 @@ body {
 
 .breed-features__wrapper {
   position: relative;
+  
+  @media (min-width: $tablet-width) {
+    max-width: 693px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1182px;
+    margin: 0 auto;
+  }
 }
 
 .breed-features__img {
@@ -463,9 +491,16 @@ body {
   padding: 0;
   list-style: none;
   text-align: left;
+
+  @media (max-width: $mobile-width-only) {
+    width: 272px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .breed-features-list__item {
+  font-size: 1em;
   margin-bottom: 30px;
   display: flex;
   align-items: flex-start;
@@ -495,7 +530,7 @@ body {
 
     &:nth-child(1) {
       max-width: 170px;
-      left: 15px;
+      left: 8px;
       top: 116px;
       flex-direction: row-reverse;
       text-align: right;
@@ -507,7 +542,7 @@ body {
 
     &:nth-child(2) {
       max-width: 150px;
-      right: 5px;
+      right: -4px;
       top: 189px;
 
       &:before {
@@ -517,8 +552,8 @@ body {
 
     &:nth-child(3) {
       max-width: 122px;
-      right: 46px;
-      bottom: 60px;
+      right: 44px;
+      bottom: 13px;
 
       &:before {
         margin: 0 11px 0 0;
@@ -527,8 +562,8 @@ body {
 
     &:nth-child(4) {
       max-width: 152px;
-      left: 5px;
-      bottom: 95px;
+      left: -2px;
+      bottom: 60px;
       flex-direction: row-reverse;
       text-align: right;
 
@@ -566,7 +601,7 @@ body {
 
     &:nth-child(3) {
       max-width: 175px;
-      right: 150px;
+      right: 135px;
       bottom: 125px;
 
       &:before {
@@ -576,7 +611,7 @@ body {
 
     &:nth-child(4) {
       max-width: 230px;
-      left: 75px;
+      left: 70px;
       bottom: 176px;
       flex-direction: row-reverse;
       text-align: right;
@@ -1128,6 +1163,11 @@ body {
   &--active {
     background-color: $lightBrown;
     background-image: url(../images/minus.svg);
+
+    & img {
+      display: block;
+      width: 100%;
+    }
   }
 
   @media (min-width: $tablet-width) {
