--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -377,6 +377,11 @@ body {
     max-width: 290px;
     display: inline-block;
 
+    @media (min-width: $tablet-width) {
+      width: auto;
+      max-width: none;
+    }
+
     & img {
       display: block;
       width: 100%;
